<resources>
    <string name="app_name">CAFF</string>
    <string name="error_occurred">An error occurred</string>
    <string name="no_caff_files_found">No CAFF files found!</string>
    <string name="no_users_found">No users found</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login_sign_up">New user? Sign up</string>
    <string name="app_slogan">Best CAFF file downloader</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="register_sign_in">Already have an account?</string>
    <string name="login">Login</string>
    <string name="purchase">Purchase</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <string name="no_comments">There are no comments for this CAFF file yet!</string>
    <string name="comments">Comments</string>
    <string name="my_caff_files">My CAFF files</string>
    <string name="bought_caff_files">Bought CAFF files</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="first_name">First name</string>
    <string name="email_address">Email address</string>
    <string name="last_name">Last name</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="change_password">Change password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit_profile">Edit profile</string>
    <string name="caff_list">Caff list</string>
    <string name="admin">Admin</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="you_haven_t_bought_any_caff_files_yet">You haven\'t bought any\n CAFF files yet!</string>
    <string name="you_haven_t_uploaded_any_caff_files_yet">You haven\'t uploaded any\n CAFF files yet!</string>
</resources>
