<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/Widget.ITSecMobil.Backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="88dp">

    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/Widget.ITSecMobil.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/purchaseProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gridBackgroundColor"
        android:elevation="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/caffImage"
                tools:src="@mipmap/caff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24dp"
                android:adjustViewBounds="true"
                android:maxHeight="250dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/authorText"
                    tools:text="Kapitány Interceptor Erik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:drawablePadding="8dp"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_camera" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/tagsText"
                    tools:text="király hely\nzsíros\npatika"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:drawablePadding="8dp"
                    android:inputType="textMultiLine"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_label" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/captionText"
                    tools:text="Legkedvencebb helyem a világon mai napig egy nagyon fasza kis vityilló"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:drawablePadding="8dp"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_caption" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/dateText"
                    tools:text="2020.04.05. 12:30:12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:drawablePadding="8dp"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_calendar" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/commentsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="28dp"
                android:background="@drawable/button_background"
                android:text="@string/comments" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/purchaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/button_background"
                android:text="@string/purchase" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>